log/build_2024-12-05_10-46-07/my_first_pkg/stderr.log
  File "/home/kim/ros2_ws/install/my_first_pkg/lib/python3.10/site-packages/my_first_pkg/turtlesim_pose_sub.py", line 20
    self.get_logger().info(f"x: {pose.x},y: {pose.y}, theta: {pose.theta},
                           ^
SyntaxError: unterminated string literal (detected at line 20)

